--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 
 
-
+    <script src="./jquery-3.6.0/jquery-3.6.0.js"></script>
     <script src="./bootstrap-4.6.0-dist/js/bootstrap.js"></script>
     <script src="./index.js"></script>
 </body>
