add jq and add .gitignore

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 
 
     <div class="header d-flex justify-content-between align-items-center">
+        <!-- 主logo -->
         <div class="logo">
             <a href="#">
                 <img src="./images/logo.svg" alt="">
             </a>
         </div>
+        <!-- 漢堡選單 -->
         <div class="nav d-flex align-items-center">
+            <!-- 兩條div製作，點擊時改變位置和角度 -->
             <div class="bar-1"></div>
             <div class="bar-2"></div>
         </div>
