調整menu的定位方式 以及wu0 ru8

--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
             <div class="bar-1"></div>
             <div class="bar-2"></div>
         </div>
+
+        <!-- 用fixed固定 -->
+        <!-- menu-背景 -->
+        <div class="menu-bg">
+            <div class="menu">
+                <h2><a href="#">TOP</a></h2>
+                <h2><a href="#">FAQ</a></h2>
+                <h2><a href="#">CONTACT</a></h2>
+            </div>
+        </div>
+
     </div>
 
-    <!-- menu-文字 -->
-    <div class="menu">
-        <h2><a href="#">TOP</a></h2>
-        <h2><a href="#">FAQ</a></h2>
-        <h2><a href="#">CONTACT</a></h2>
-    </div>
-    <!-- menu-背景 -->
-    <div class="menu-bg"></div>
 
     <div class="main">
         <div class="item-group">
