修改a連結# 為 javascript:void(0)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header d-flex justify-content-between align-items-center">
         <!-- 主logo -->
         <div class="logo">
-            <a href="#">
+            <a href="javascript:void(0)">
                 <img src="./images/logo.svg" alt="">
             </a>
         </div>
@@ -31,9 +31,9 @@
         <!-- menu-背景 -->
         <div class="menu-bg">
             <div class="menu">
-                <h2><a href="#">TOP</a></h2>
-                <h2><a href="#">FAQ</a></h2>
-                <h2><a href="#">CONTACT</a></h2>
+                <h2><a href="javascript:void(0)">TOP</a></h2>
+                <h2><a href="javascript:void(0)">FAQ</a></h2>
+                <h2><a href="javascript:void(0)">CONTACT</a></h2>
             </div>
         </div>
 
@@ -44,23 +44,23 @@
         <div class="item-group">
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400.jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">伊藤 かりん</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_youtube.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_twitter.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -69,17 +69,17 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400.png" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">伊藤 万理華</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -88,17 +88,17 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (1).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">衛藤 美彩</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -107,17 +107,17 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (3).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">相楽 伊織</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -126,17 +126,17 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (2).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">桜井 玲香</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -145,23 +145,23 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (4).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">白石 麻衣</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_youtube.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_twitter.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -170,20 +170,20 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (5).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">中田 花奈</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_twitter.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -192,14 +192,14 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (7).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">中元 日芽香</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -208,20 +208,20 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (6).jpg" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">西野 七瀬</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_twitter.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
@@ -230,17 +230,17 @@
             </div>
             <div class="item d-flex flex-column align-items-center">
                 <div class="pic">
-                    <a href="#">
+                    <a href="javascript:void(0)">
                         <img src="./images/1000_1000_102400 (1).png" alt="">
                     </a>
                 </div>
                 <div class="text d-flex">
                     <div class="name">松村 沙友理</div>
                     <div class="sns">
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_insta.svg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="javascript:void(0)">
                             <img src="./images/icon_mail.svg" alt="">
                         </a>
                     </div>
